# mcp-server-qdrant-enhanced-MacOS

./: .gitignore  Dockerfile  HANDOFF.md  PRODUCTION_REVIEW.md  QDRANT_CONFIG_GUIDE.md  README.md  claude_config.json  lm-studio_working_config.json  pyproject.toml  qdrant-enhanced.yaml  requirements.txt
.github/workflows/: pypi-publish.yaml  pytest.yaml
rust/qwen3_embedder/: Cargo.toml
rust/qwen3_embedder/src/: main.rs
scripts/: benchmark_li.py  benchmark_modes.py  benchmark_rerank.py  benchmark_setup.py  benchmark_split.py  check-server-qdrant.sh  diagnostic_retrieval.py  ingest_li.py  local-configure-hermes.py  local-doctor.sh  local-env.sh  local-install.sh  local-run-mcp.sh  local-run-qdrant.sh  local-run-webui.sh  migrate-local-to-server.py  reset-server-qdrant.sh  run-server-mcp.sh  setup-socratic-server.sh  smoke-test-server-mcp.sh  smoke-test-socratic-mcp.sh
src/mcp_server_qdrant/: _warnings.py  config.py  docker_utils.py  embedding_manager.py  enhanced_tool_descriptions.py  main.py  (+5 more)
tests/: test_docker_utils.py  test_embedding_factory.py  test_envelope.py  test_filter_grammar.py  test_flagembedding_optional.py  test_hybrid_fallback.py  test_ingest_extractor.py  test_late_interaction.py  test_local_configure_hermes.py  test_local_env_scripts.py  test_macos_metadata.py  test_output_schemas.py  test_plan_registry.py  test_profiles.py  test_provider_resolver.py  test_qdrant_provider_safe_search.py  test_qwen3_metrics.py  test_reranker.py  test_search_documents_defaults.py  test_settings.py  test_transport_e2e.py  test_webui_api_routes.py  test_write_queue.py
(+22 files in other folders)
