[package]
name = "qwen3-embedder"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fastembed = { version = "5", default-features = false, features = ["hf-hub", "metal", "ort-download-binaries-rustls-tls", "qwen3"] }

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.10", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = "0.10"
